# idiscover

./: .gitignore  LICENSE  README.md  go.work  go.work.sum  idiscover.code-workspace
document/notes/: mathematica.md
document/technique/: devtools.md  linux-cmd.md  windows-cmd.md
homework/stackmath/: group-001.md  inequality-001.md  limit-001-answer.md  limit-002-ans.md
homework/voice0golang/c09-client/: client.go  go.mod
homework/voice0golang/c09-comm/: common.go  go.mod
homework/voice0golang/c09-server/: go.mod  server.go
homework/voice0golang/c10-dnsclient/: client.go  go.mod  query.go  udp.go
homework/voice0golang/c10-udpserver/: go.mod  server.go
homework/voice0golang/c12-interface-reflect/: go.mod  main.go
learning/gopackage/go-byexample/go-advanced/: go.mod  main.go
learning/gopackage/go-byexample/go-advanced02/: go.mod  main.go
learning/leetcode/: problem-207-course.cpp  problem-210-course.cpp  problem-6329-subarray.cpp  problem-6330-shortest-ring.cpp  problem-6364-mouse-cheese.cpp  problem-6378-mintravelcost.cpp  problem-85-maxmatrix.cpp  rush-plan.md  template.cpp
learning/moderncpp/: case-cast4.cpp  case-smartptr.cpp  features.md  template.cpp
learning/openglcn/gameplay/: CMakeLists.txt  build-mingw.sh
learning/openglcn/gameplay/include/: Base.h  Curve.h
learning/openglcn/gameplay/src/: Logger.cpp
learning/openglcn/gltool/: xmodel.h
learning/openglcn/sample-low/: CMakeLists.txt  build-mingw.sh  sample-hello.cpp  sample-triangle.cpp
projects/go-mypdf/: go.mod  go.sum
projects/go-mypdf/cmd/: main.go
(+33 files in other folders)
